Removed JavaFX dependencies from JAR to Java/JRE.